# Paint-Inspection

./: Binary.py  Binary2.py  CameraParameters.pfs  CameraParameters1.pfs  Checker.py  GUI.py  Gray.py  Noise_pattern.py  PhaseShifting.py  PhaseShifting2.py  PhaseShiftingGPU.py  PhaseShiftingSeparated.py  README.md  Ramp.py  Stripe.py  Stripy.py  XOR.py  background_ajdust.py  basler.py  cam_settings.py  camera_focus.py  camset.py  correspondence_points.py  fringe_edgeDetection.py  imageprocessing.py  livecam.py  mvtec.hdev  object_dimension.py  object_dimension_without_camera.py  pixel_brightness.py  run2pytest.py  solidFringe.py  squarePattern.py  stream_cam.py  test.txt  test_Canny.py  test_bw.py  tobecalled.py
camera_settings/Development/Samples/: CMakeLists.txt
camera_settings/Development/Samples/C/: HowToBuildSamples.txt  PylonCSamples.sln  include.mak  include.props
camera_settings/Development/Samples/C#/Basler.Pylon/: pylon.NET.API.Samples.sln
camera_settings/Development/Samples/C++/: HowToBuildSamples.txt  PylonSamples.sln
camera_settings/Development/Samples/C++/DeviceRemovalHandling/: CMakeLists.txt  DeviceRemovalHandling.cpp  DeviceRemovalHandling.vcxproj  DeviceRemovalHandling.vcxproj.filters
camera_settings/Development/Samples/C++/GUI_ImageWindow/: CMakeLists.txt  GUI_ImageWindow.cpp  GUI_ImageWindow.vcxproj
camera_settings/Development/Samples/C++/GUI_MFC/: AutoPacketSizeConfiguration.h  ConfigView.cpp  ConfigView.h  GuiSample.cpp  GuiSample.h  GuiSample.rc  GuiSample.vcxproj  GuiSample.vcxproj.filters  GuiSampleDoc.cpp  GuiSampleDoc.h  GuiSampleView.cpp  GuiSampleView.h  MainFrm.cpp  MainFrm.h  PylonStringHelpers.cpp  PylonStringHelpers.h  Resource.h  stdafx.h
camera_settings/Development/Samples/C++/GUI_MFCMultiCam/: GuiCamera.cpp  GuiCamera.h  GuiSampleMultiCam.cpp  GuiSampleMultiCam.h  GuiSampleMultiCam.rc  GuiSampleMultiCam.vcxproj  GuiSampleMultiCam.vcxproj.filters  GuiSampleMultiCamDlg.cpp  GuiSampleMultiCamDlg.h  PylonStringHelpers.cpp  Resource.h  stdafx.cpp  stdafx.h
camera_settings/Development/Samples/C++/GUI_QtMultiCam/: GUI_QtMultiCam.pro
camera_settings/Development/Samples/C++/Grab/: Grab.vcxproj
camera_settings/Development/Samples/C++/Utility_GrabAvi/: CMakeLists.txt  (+2 more)
(+175 files in other folders)
