# Root CMakeLists.txt for the overall Pylon project
cmake_minimum_required(VERSION 3.14)
cmake_policy(SET CMP0074 NEW)    # respect <PACKAGE>_ROOT variables in "find_package"
include(CMakePrintHelpers)

project(PylonSamples VERSION 0.0)
find_package(pylon 7.2.0 REQUIRED)



add_subdirectory(C++/DeviceRemovalHandling)
add_subdirectory(C++/Grab)
add_subdirectory(C++/Grab_CameraEvents)
add_subdirectory(C++/Grab_UsingBufferFactory)
add_subdirectory(C++/Grab_MultipleCameras)
add_subdirectory(C++/Grab_UsingExposureEndEvent)
add_subdirectory(C++/Grab_UsingSequencer)
add_subdirectory(C++/Grab_MultiCast)
add_subdirectory(C++/Grab_UsingGrabLoopThread)
add_subdirectory(C++/Grab_UsingActionCommand)
add_subdirectory(C++/Grab_ChunkImage)

if (NOT DEFINED APPLE)
add_subdirectory(C++/Utility_GrabVideo)
endif()
if (WIN32)
add_subdirectory(C++/Utility_GrabAvi)
endif()

if (_pylon_PylonGUI_FOUND)
add_subdirectory(C++/Utility_Image)
endif()

add_subdirectory(C++/Grab_Strategies)
add_subdirectory(C++/ParametrizeCamera_NativeParameterAccess)
add_subdirectory(C++/ParametrizeCamera_Shading)
add_subdirectory(C++/ParametrizeCamera_UserSets)
add_subdirectory(C++/ParametrizeCamera_AutoFunctions)
add_subdirectory(C++/ParametrizeCamera_SerialCommunication)
add_subdirectory(C++/ParametrizeCamera_LookupTable)
add_subdirectory(C++/ParametrizeCamera_LoadAndSave)
add_subdirectory(C++/ParametrizeCamera_GenericParameterAccess)
add_subdirectory(C++/ParametrizeCamera_Configurations)
add_subdirectory(C++/Utility_ImageDecompressor)
if (NOT DEFINED APPLE)
add_subdirectory(C++/Utility_InstantInterface)
endif()
add_subdirectory(C++/Utility_ImageLoadAndSave)
add_subdirectory(C++/Utility_ImageFormatConverter)
add_subdirectory(C++/Utility_IpConfig)

if (NOT DEFINED APPLE)
add_subdirectory(C/SimpleGrab)
add_subdirectory(C/Events)
add_subdirectory(C/ActionCommands)
add_subdirectory(C/OverlappedGrab)
add_subdirectory(C/GrabTwoCameras)
add_subdirectory(C/ImageDecompressor)
add_subdirectory(C/SurpriseRemoval)
add_subdirectory(C/GenApiParam)
add_subdirectory(C/ParametrizeCamera)
add_subdirectory(C/Chunks)
endif()